--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd backend && npm start\" \"cd client && npm start\"",
-    "dev": "concurrently \"cd backend && npm run dev\" \"cd client && npm start\""
+    "dev": "concurrently \"cd backend && npm run dev\" \"cd client && npm start\"",
+    "postinstall": "cd backend && install && cd .. && cd client && npm install"
   },
   "keywords": [],
   "author": "",
