--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "concurrently \"cd backend && npm start\" \"cd client && npm start\"",
     "dev": "concurrently \"cd backend && npm run dev\" \"cd client && npm start\"",
-    "postinstall": "cd backend && install && cd .. && cd client && npm install"
+    "postinstall": "cd backend && npm install && cd .. && cd client && npm install"
   },
   "keywords": [],
   "author": "",
