--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "tictactoe",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Launcher for tictactoe-universe",
+  "author": "Henning Merklinger",
+  "license": "ISC",
+  "private": true,
   "scripts": {
     "start": "npm start --prefix backend",
     "server": "npm run dev --prefix backend",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "postinstall": "npm install --prefix backend && npm install --prefix client",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "npm run build --prefix client"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "concurrently": "^5.0.0"
   }
