--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "postinstall": "npm install --prefix backend && npm install --prefix client",
-    "heroku-postbuild": "npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "concurrently": "^5.0.0"
