--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,13 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "config": "^3.2.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
     "path": "^0.12.7",
     "socket.io": "^2.3.0"
