--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "npm start --prefix backend",
     "server": "npm run dev --prefix backend",
     "client": "npm start --prefix client",
+    "build": "npm run build --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "postinstall": "npm install --prefix backend && npm install --prefix client",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
